[gd_scene load_steps=22 format=3 uid="uid://fdwyax12qpdr"]

[ext_resource type="Script" path="res://src/timeline/TimelineFuncbar.gd" id="1_75qo8"]
[ext_resource type="Texture2D" uid="uid://bn6kf7q2w3mll" path="res://assets/icons/add-layer.png" id="1_p43yg"]
[ext_resource type="Texture2D" uid="uid://cctvx5owwp6ck" path="res://assets/icons/delete-layer.png" id="2_kd4vs"]
[ext_resource type="Texture2D" uid="uid://bi2txp2rls3tu" path="res://assets/icons/up-layer.png" id="3_2utr1"]
[ext_resource type="Texture2D" uid="uid://bqxvd7361lbwu" path="res://assets/icons/down-layer.png" id="4_jumqu"]
[ext_resource type="Texture2D" uid="uid://dfwqgv8o31b53" path="res://assets/icons/clone-layer.png" id="5_q0wh4"]
[ext_resource type="Texture2D" uid="uid://vdnbkb0a85o7" path="res://assets/icons/merge-layer.png" id="6_rnrj1"]
[ext_resource type="Texture2D" uid="uid://nyd7ybgj0r6y" path="res://assets/icons/plus.png" id="7_a0pal"]
[ext_resource type="Texture2D" uid="uid://bexqwxtnmv0bh" path="res://assets/icons/minus.png" id="8_sslgf"]
[ext_resource type="Texture2D" uid="uid://c2nwx40tuvgqk" path="res://assets/icons/clone.png" id="9_cdtuk"]
[ext_resource type="Texture2D" uid="uid://brv67vsp8mwtq" path="res://assets/icons/tag.png" id="10_wljh3"]
[ext_resource type="Texture2D" uid="uid://cccej3fua0q7w" path="res://assets/icons/play-reverse.png" id="11_qbs0x"]
[ext_resource type="Script" path="res://src/widgets/IconToggleBtn.gd" id="12_evpth"]
[ext_resource type="Texture2D" uid="uid://ce8lwdmka8oer" path="res://assets/icons/stop.png" id="13_aujtt"]
[ext_resource type="Texture2D" uid="uid://b1wg3bnpb74gy" path="res://assets/icons/play.png" id="14_lqm08"]
[ext_resource type="Texture2D" uid="uid://c1mgrak10516n" path="res://assets/icons/loop-off.png" id="15_jv221"]
[ext_resource type="Texture2D" uid="uid://dh8ctbilyyom" path="res://assets/icons/loop-on.png" id="16_48dji"]
[ext_resource type="Texture2D" uid="uid://bam6ddh2bcr7f" path="res://assets/icons/onino-setting.png" id="17_iilog"]
[ext_resource type="Texture2D" uid="uid://dkv14hlwkg80k" path="res://assets/icons/onino-off.png" id="18_byh8n"]
[ext_resource type="Texture2D" uid="uid://cu32y4qu0sipq" path="res://assets/icons/onino-on.png" id="19_tj5dq"]
[ext_resource type="Script" path="res://src/widgets/ValSlider.gd" id="20_4xfxh"]

[node name="TimelineFuncbar" type="HBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_75qo8")

[node name="OptBtnAdd" type="MenuButton" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("1_p43yg")
flat = false
icon_alignment = 1
item_count = 2
popup/item_0/text = "Add Layer"
popup/item_0/id = 0
popup/item_1/text = "Add Group"
popup/item_1/id = 1

[node name="BtnDelete" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("2_kd4vs")
icon_alignment = 1

[node name="BtnUp" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("3_2utr1")
icon_alignment = 1

[node name="BtnDown" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("4_jumqu")
icon_alignment = 1

[node name="BtnClone" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("5_q0wh4")
icon_alignment = 1

[node name="BtnMerge" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
disabled = true
icon = ExtResource("6_rnrj1")
icon_alignment = 1

[node name="holder" type="VSeparator" parent="."]
layout_mode = 2
size_flags_horizontal = 3

[node name="BtnAddFrame" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("7_a0pal")
icon_alignment = 1

[node name="BtnRemoveFrame" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("8_sslgf")
icon_alignment = 1

[node name="BtnCloneFrame" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("9_cdtuk")
icon_alignment = 1

[node name="BtnTag" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("10_wljh3")
icon_alignment = 1

[node name="BtnPlayReverse" type="Button" parent="."]
modulate = Color(0.411765, 0.411765, 0.411765, 1)
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("11_qbs0x")
icon_alignment = 1
script = ExtResource("12_evpth")
ico_on = ExtResource("13_aujtt")
ico_off = ExtResource("11_qbs0x")

[node name="BtnPlay" type="Button" parent="."]
modulate = Color(0.411765, 0.411765, 0.411765, 1)
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("14_lqm08")
icon_alignment = 1
script = ExtResource("12_evpth")
ico_on = ExtResource("13_aujtt")
ico_off = ExtResource("14_lqm08")

[node name="BtnLoop" type="Button" parent="."]
modulate = Color(0.411765, 0.411765, 0.411765, 1)
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("15_jv221")
icon_alignment = 1
script = ExtResource("12_evpth")
ico_on = ExtResource("16_48dji")
ico_off = ExtResource("15_jv221")

[node name="hoder-2" type="VSeparator" parent="."]
layout_mode = 2
theme_type_variation = &"VDivider"

[node name="BtnOnionSetting" type="Button" parent="."]
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
icon = ExtResource("17_iilog")
icon_alignment = 1

[node name="BtnOnion" type="Button" parent="."]
modulate = Color(0.411765, 0.411765, 0.411765, 1)
custom_minimum_size = Vector2(24, 0)
layout_mode = 2
theme_type_variation = &"IconButton"
toggle_mode = true
icon = ExtResource("18_byh8n")
icon_alignment = 1
script = ExtResource("12_evpth")
ico_on = ExtResource("19_tj5dq")
ico_off = ExtResource("18_byh8n")

[node name="OptFPS" type="ProgressBar" parent="."]
custom_minimum_size = Vector2(100, 30)
layout_mode = 2
min_value = 1.0
max_value = 60.0
step = 1.0
value = 1.0
show_percentage = false
script = ExtResource("20_4xfxh")
suffix = "FPS"
